idea/testData/debugger/sequence/psi/streams/positive/ambiguous/StreamProducerParameter.kt
import java.util.stream.IntStream

fun main(args: Array<String>) {
<caret>  IntStream.of(IntStream.of(1).sum()).sum()
}
