idea/testData/debugger/sequence/psi/streams/negative/BreakpointOnMethod.kt
import java.util.stream.IntStream

<caret>fun main(args: Array<String>) {
  val s = IntStream.range(1, 2).sum()
}
